--- a/pollution_data_visualizer/static/css/animations.css
+++ b/pollution_data_visualizer/static/css/animations.css
@@ -8,3 +8,12 @@
     opacity: 1;
   }
 }
+
+.highlight {
+  animation: highlight 2s ease-out forwards;
+}
+
+@keyframes highlight {
+  from { background-color: yellow; }
+  to { background-color: transparent; }
+}
