--- a/pollution_data_visualizer/templates/index.html
+++ b/pollution_data_visualizer/templates/index.html
@@ -20,6 +20,32 @@
     <h5 class="offcanvas-title" id="detailTitle"></h5>
     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
-  <div class="offcanvas-body" id="detail-content"></div>
+  <div class="offcanvas-body" id="detail-content">
+    <div class="row">
+      <div class="col-md-6">
+        <canvas id="historyChart"></canvas>
+      </div>
+      <div class="col-md-6">
+        <h5>Current Metrics</h5>
+        <ul class="list-unstyled mb-3">
+          <li><span class="metric-label">AQI:</span> <span id="detail-aqi"></span></li>
+          <li><span class="metric-label">PM2.5:</span> <span id="detail-pm25"></span></li>
+          <li><span class="metric-label">CO:</span> <span id="detail-co"></span></li>
+          <li><span class="metric-label">NO2:</span> <span id="detail-no2"></span></li>
+        </ul>
+        <canvas id="pieChart"></canvas>
+        <div class="progress mt-3">
+          <div class="progress-bar bg-success" role="progressbar" id="bar-good" style="width:0%"></div>
+        </div>
+        <div class="progress mt-2">
+          <div class="progress-bar bg-warning" role="progressbar" id="bar-moderate" style="width:0%"></div>
+        </div>
+        <div class="progress mt-2">
+          <div class="progress-bar bg-danger" role="progressbar" id="bar-bad" style="width:0%"></div>
+        </div>
+        <p id="advice" class="mt-3 neon-text"></p>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock %}
