--- a/pollution_data_visualizer/templates/index.html
+++ b/pollution_data_visualizer/templates/index.html
@@ -28,12 +28,21 @@
       <div class="col-md-6">
         <h5>Current Metrics</h5>
         <ul class="list-unstyled mb-3">
-          <li><span class="metric-label">AQI:</span> <span id="detail-aqi"></span></li>
-          <li><span class="metric-label">PM2.5:</span> <span id="detail-pm25"></span></li>
-          <li><span class="metric-label">CO:</span> <span id="detail-co"></span></li>
-          <li><span class="metric-label">NO2:</span> <span id="detail-no2"></span></li>
+          <li class="metric-item" data-bs-toggle="tooltip" title="Air Quality Index">
+            <span class="metric-label">AQI:</span> <span id="detail-aqi"></span>
+          </li>
+          <li class="metric-item" data-bs-toggle="tooltip" title="Particulate Matter 2.5">
+            <span class="metric-label">PM2.5:</span> <span id="detail-pm25"></span>
+          </li>
+          <li class="metric-item" data-bs-toggle="tooltip" title="Carbon Monoxide">
+            <span class="metric-label">CO:</span> <span id="detail-co"></span>
+          </li>
+          <li class="metric-item" data-bs-toggle="tooltip" title="Nitrogen Dioxide">
+            <span class="metric-label">NO2:</span> <span id="detail-no2"></span>
+          </li>
         </ul>
         <canvas id="pieChart"></canvas>
+        <canvas id="pollutantChart" class="mt-3"></canvas>
         <div class="progress mt-3">
           <div class="progress-bar bg-success" role="progressbar" id="bar-good" style="width:0%"></div>
         </div>
