Add realtime updates, map, and autocomplete

--- a/pollution_data_visualizer/templates/index.html
+++ b/pollution_data_visualizer/templates/index.html
@@ -7,10 +7,10 @@
         <form id="search-form" class="mb-4 position-relative d-flex gap-2 justify-content-center">
             <input id="search-input" type="text" class="form-control" placeholder="Enter city name" autocomplete="off" required>
             <button class="btn btn-success btn-animated" type="submit">Search</button>
-            <div id="suggestions" class="list-group position-absolute w-100"></div>
         </form>
     </div>
 </section>
+<div id="map" class="my-4" style="height:400px;"></div>
 <div class="container mt-4">
     <div id="cities" class="row"></div>
 </div>
