Add login and favorites, loading spinner, and tests

--- a/pollution_data_visualizer/templates/index.html
+++ b/pollution_data_visualizer/templates/index.html
@@ -7,6 +7,7 @@
         <form id="search-form" class="mb-4 position-relative d-flex gap-2 justify-content-center">
             <input id="search-input" type="text" class="form-control" placeholder="Enter city name" autocomplete="off" required>
             <button class="btn btn-success btn-animated" type="submit">Search</button>
+            <div id="loading" class="spinner-border text-light ms-2" role="status" style="display:none;"><span class="visually-hidden">Loading...</span></div>
         </form>
     </div>
 </section>
