--- a/pollution_data_visualizer/templates/base.html
+++ b/pollution_data_visualizer/templates/base.html
@@ -29,6 +29,16 @@
         <li class="nav-item">
           <a class="nav-link" href="/about">About</a>
         </li>
+        {% if user %}
+        <li class="nav-item text-white mt-2 me-3">Hello, {{ user.username }}</li>
+        <li class="nav-item">
+          <a class="nav-link" href="/logout">Logout</a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="/login">Login</a>
+        </li>
+        {% endif %}
         <li class="nav-item">
           <button id="theme-toggle" class="btn btn-secondary ms-3">Toggle Theme</button>
         </li>
