Improve UI interactions and messages

--- a/pollution_data_visualizer/templates/base.html
+++ b/pollution_data_visualizer/templates/base.html
@@ -49,6 +49,9 @@
 
 {% block content %}{% endblock %}
 
+<!-- Toast container for status messages -->
+<div id="toast-container" class="position-fixed top-0 end-0 p-3" style="z-index:1100"></div>
+
 <script src="{{ url_for('static', filename='js/suggestions.js') }}"></script>
 <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
