--- a/pollution_data_visualizer/templates/index.html
+++ b/pollution_data_visualizer/templates/index.html
@@ -46,6 +46,7 @@
       </div>
       <div class="col-md-6">
         <h5>Current Metrics</h5>
+        <p id="advice" class="neon-text mb-3"></p>
         <ul class="list-unstyled mb-3">
           <li class="metric-item" data-bs-toggle="tooltip" title="Air Quality Index">
             <span class="metric-label">AQI:</span> <span id="detail-aqi"></span>
@@ -71,7 +72,7 @@
         <div class="progress mt-2">
           <div class="progress-bar bg-danger" role="progressbar" id="bar-bad" style="width:0%"></div>
         </div>
-        <p id="advice" class="mt-3 neon-text"></p>
+        <button type="button" class="btn btn-secondary mt-3" data-bs-dismiss="offcanvas">Close</button>
       </div>
     </div>
   </div>
