--- a/pollution_data_visualizer/templates/index.html
+++ b/pollution_data_visualizer/templates/index.html
@@ -40,13 +40,13 @@
   </div>
   <div class="offcanvas-body" id="detail-content">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 mb-3">
         <button id="chartToggle" class="btn btn-primary btn-sm btn-animated mb-2">Toggle Chart</button>
         <canvas id="historyChart"></canvas>
       </div>
       <div class="col-md-6">
-        <h5>Current Metrics</h5>
         <p id="advice" class="neon-text mb-3"></p>
+        <h5>Current Metrics</h5>
         <ul class="list-unstyled mb-3">
           <li class="metric-item" data-bs-toggle="tooltip" title="Air Quality Index">
             <span class="metric-label">AQI:</span> <span id="detail-aqi"></span>
