Add profile page, marker interactions, and comparison improvements

--- a/pollution_data_visualizer/templates/index.html
+++ b/pollution_data_visualizer/templates/index.html
@@ -27,6 +27,7 @@
       </div>
       <div class="modal-body">
         <canvas id="compareChart"></canvas>
+        <canvas id="comparePollutantChart" class="mt-4"></canvas>
       </div>
     </div>
   </div>
