--- a/pollution_data_visualizer/templates/base.html
+++ b/pollution_data_visualizer/templates/base.html
@@ -31,6 +31,7 @@
         </li>
         {% if user %}
         <li class="nav-item text-white mt-2 me-3">Hello, {{ user.username }}</li>
+        <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
         <li class="nav-item">
           <a class="nav-link" href="/logout">Logout</a>
         </li>
