Remove login flows, shift favorites to local storage

--- a/pollution_data_visualizer/templates/profile.html
+++ b/pollution_data_visualizer/templates/profile.html
@@ -2,21 +2,11 @@
 {% block content %}
 <div class="container">
   <h1 class="mb-4">Profile</h1>
-  <form method="post">
-    <table class="table">
-      <thead><tr><th>City</th><th>Alert Threshold</th><th>Remove</th></tr></thead>
-      <tbody id="favorites-body">
-      {% for fav in user.favorites %}
-      <tr data-city="{{ fav.city }}">
-        <td>{{ fav.city }}</td>
-        <td><input type="number" name="alert_{{ fav.city }}" class="form-control alert-input" value="{{ fav.alert or 150 }}"></td>
-        <td><button type="button" class="btn btn-danger remove-btn" data-city="{{ fav.city }}">Remove</button></td>
-      </tr>
-      {% endfor %}
-      </tbody>
-    </table>
-    <button id="saveFavs" type="submit" class="btn btn-primary btn-animated">Save Changes</button>
-  </form>
+  <table class="table">
+    <thead><tr><th>City</th><th>Alert Threshold</th><th>Remove</th></tr></thead>
+    <tbody id="favorites-body"></tbody>
+  </table>
+  <button id="saveFavs" class="btn btn-primary btn-animated">Save Changes</button>
 </div>
 <script src="{{ url_for('static', filename='js/profile.js') }}"></script>
 {% endblock %}
