--- a/pollution_data_visualizer/templates/base.html
+++ b/pollution_data_visualizer/templates/base.html
@@ -29,17 +29,7 @@
         <li class="nav-item">
           <a class="nav-link" href="/about">About</a>
         </li>
-        {% if user %}
-        <li class="nav-item text-white mt-2 me-3">Hello, {{ user.username }}</li>
         <li class="nav-item"><a class="nav-link" href="/profile">Profile</a></li>
-        <li class="nav-item">
-          <a class="nav-link" href="/logout">Logout</a>
-        </li>
-        {% else %}
-        <li class="nav-item">
-          <a class="nav-link" href="/login">Login</a>
-        </li>
-        {% endif %}
         <li class="nav-item">
           <button id="theme-toggle" class="btn btn-secondary ms-3">Toggle Theme</button>
         </li>
@@ -54,6 +44,7 @@
 <div id="toast-container" class="position-fixed top-0 end-0 p-3" style="z-index:1100"></div>
 
 <script src="{{ url_for('static', filename='js/suggestions.js') }}"></script>
+<script src="{{ url_for('static', filename='js/utils.js') }}"></script>
 <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
