--- a/pollution_data_visualizer/templates/base.html
+++ b/pollution_data_visualizer/templates/base.html
@@ -16,6 +16,21 @@
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css" />
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+    <script type="text/javascript" charset="utf-8">
+        (function (w, d, t, f) {
+            w[f] = w[f] || function (c, k, n) {
+                s = w[f];
+                k = s['k'] = (s['k'] || (k ? ('&k=' + k) : ''));
+                s['c'] = c = (c instanceof Array) ? c : [c];
+                s['n'] = n = n || 0;
+                L = d.createElement(t);
+                e = d.getElementsByTagName(t)[0];
+                L.async = 1;
+                L.src = '//feed.aqicn.org/feed/' + (c[n].city) + '/' + (c[n].lang || '') + '/feed.v1.js?n=' + n + k;
+                e.parentNode.insertBefore(L, e);
+            };
+        })(window, document, 'script', '_aqiFeed');
+    </script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
