Add dynamic markers and dark popups

--- a/pollution_data_visualizer/static/css/theme.css
+++ b/pollution_data_visualizer/static/css/theme.css
@@ -5,3 +5,13 @@ body.light-mode {
 body.light-mode .card {
   background: #fff;
 }
+
+.offcanvas {
+  background-color: #1e1e1e;
+  color: #fff;
+}
+
+body.light-mode .offcanvas {
+  background-color: #fff;
+  color: #000;
+}
